<resources>
    <string name="app_name">Anatoliy Dvoryashin</string>
    <string name="todo">TODO</string>
    <string name="avatar" />
    <string name="avatar_image">TODO</string>
    <string name="card_resume">I am a beginner android developer. At 30, I decided to change the field of activity.  In my daily schedule I allocate time to learn a new profession.</string>
    <string name="instagram">instagram</string>
    <string name="telegram">telegram</string>
    <string name="headhunter">HeadHunter</string>
    <string name="github">github</string>
    <string name="vkontakte">vkontakte</string>
    <string name="enter_mess">Enter a message</string>
    <string name="send_message">Send Message</string>
    <string name="no_email_client_error">You need mail client to send email</string>
    <string name="message_text_empty">Message is empty</string>
    <string name="enter_a_string_enter_mess">Enter a @string/enter_mess</string>
</resources>
