<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/black" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/avatar_image"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:srcCompat="@drawable/avatar"/>

            <TextView
                android:id="@+id/textView"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/card_resume"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:visibility="visible" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/telegram"
            android:visibility="visible"
            app:srcCompat="@drawable/telegram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/instagram"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vkontakte"
            app:srcCompat="@drawable/vk" />

          </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>